# skbuild-core-import

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/example/: CMakeLists.txt
src/example/common/: __init__.py  pure.py
src/example/nested/: CMakeLists.txt  __init__.py  impl.pxd  impl.py  impl.pyx  source.pxd
tests/: run_example.py  test.py  test_example.py
